--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Debanjali Basu # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/debbie pic.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  #First description 
   <br>Data Scientist<br>
-  Second description 
+  #Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/debanjalibasu/">View My LinkedIn Profile</a> 
   <a href="https://github.com/DebanjaliBasu">View My Github Profile</a>
