--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Debanjali Basu # your name (or website title) here
-logo: "/images/debbie pic.png?raw=true" # your photo (or logo) here
+logo: "https://github.com/DebanjaliBasu/debanjalibasu.github.io/blob/master/images/debbie%20pic.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   #First description 
   <br>Data Scientist<br>
