--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 title: Debanjali Basu # your name (or website title) here
-logo: "https://github.com/DebanjaliBasu/debanjalibasu.github.io/blob/master/images/debbie%20pic.jpg" # your photo (or logo) here
+logo: "images/debbie pic.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   #First description 
   <br>Data Scientist<br>
   #Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/debanjalibasu/">View My LinkedIn Profile</a> 
+  <br>
   <a href="https://github.com/DebanjaliBasu">View My Github Profile</a>
   
 theme: jekyll-theme-minimal
