--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>Data Scientist<br>
   <br><br>
   <a href="https://www.linkedin.com/in/debanjalibasu/">View My LinkedIn Profile</a> <br>
+  <a href="https://medium.com/@debanjalibasu">View My Medium Profile</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
