--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,9 @@ title: Debanjali Basu # your name (or website title) here
 logo: "images/debbie pic.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks) 
   <br>Data Scientist<br>
+  Data Science Enthusiast | Data Lover ❤ I like to use Data Science to answer Financial,Health and Socio-Economic issues.
   <br><br>
-  <a href="https://www.linkedin.com/in/debanjalibasu/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/debanjalibasu/">View My LinkedIn Profile</a> <br>
   <a href="https://medium.com/@debanjalibasu">View My Medium Profile</a>
   
 theme: jekyll-theme-minimal
